<resources>
    <string name="app_name">Bazaar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--  TODO: Remove or change this placeholder text  -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="re_enter_pass">Confirm password</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="tv_goToLogIn">"Back To Log In "</string>
    <string name="btn_logIn">LogIn</string>
    <string name="tv_gotoSignUp">Don\'t Have an account?</string>
    <string name="tv_GuestMode">Skip</string>

    <string name="favourite">Favourite</string>
    <string name="cart">Cart</string>
    <string name="brands">Brands</string>
    <string name="adds_and_offers">Adds and offers</string>
    <string name="textview">TextView</string>
    <string name="item_image">Item image</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>

    <string name="proceed_to_checkout_text">PROCEED TO CHECKOUT</string>
    <string name="total_price">Total price:</string>
    <string name="icon_for_product">icon for product</string>
    <string name="fragment_name">fragment_name</string>
    <string name="more">More</string>
    <string name="price">Total spent:</string>
    <string name="created_at">created at:</string>

    <string name="orders">Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="continue_to_payment">Continue</string>
    <string name="paypal">Pay online</string>
    <string name="proceed">Proceed</string>
    <string name="address">Address</string>
    <string name="country">Country:</string>
    <string name="phone">Phone:</string>
    <string name="city_text">Address:</string>
    <string name="add_new_address">Add new address</string>
    <string name="enter_your_governorate">Governorate</string>
    <string name="enter_your_phone_number">Number</string>
    <string name="enter_your_city">City</string>
    <string name="main_fab">Main FAB</string>
    <string name="women">WOMEN</string>
    <string name="sale">Sale</string>
    <string name="men">MEN</string>
    <string name="kid">KID</string>
    <string name="currency">Currency</string>
    <string name="egp">EGP</string>
    <string name="egypt">EGYPT</string>
    <string name="sub_total">Sub Total</string>
    <string name="shipping_fees">Shipping Fees</string>
    <string name="validate"><u>Validate</u></string>
    <string name="coupon">Coupon</string>
    <string name="discount">Discount</string>
    <string name="place_order">Place Order</string>
    <string name="tv_review">Reviews</string>
    <string name="tv_desc">Description:</string>
    <string name="tv_reviews">"Reviews : "</string>
    <string name="tv_availableSizes">Available Sizes</string>
    <string name="tv_avalablColorTxt">Available Colors</string>
    <string name="btn_addToCart">Add To Bag</string>
    <string name="prouductDetails">Product Details</string>
    <string name="fragmentSearch">Search</string>
    <string name="fragmentProuductInfo">Product Details</string>
    <string name="my_orders">ORDERS DETAILS</string>
    <string name="price_order">Price:</string>
    <string name="creation_date">Creation Date:</string>
    <string name="favProducts">Favorite</string>
    <string name="or_login_with">Or login with</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="save">Save</string>
    <string name="select_color">Select color</string>
    <string name="shop">Shop</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="search">Search</string>
    <string name="change">Change</string>
    <string name="order">Order:</string>
    <string name="shipping_address">Shipping address</string>
    <string name="success">Success!</string>
    <string name="your_order_will_be_delivered_soon_thank_you_for_choosing_our_app">Your order will be delivered soon.\nThank you for choosing our app!</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="use_as_shipping_address">Use as shipping address</string>
    <string name="full_name">Full name</string>
    <string name="building_number">building number</string>
    <string name="street_name">Street name</string>
    <string name="last_name">Last name</string>
    <string name="order_number">Order №</string>
    <string name="confirmation_number">Confirmation number:</string>
    <string name="total_amount">Total amount:</string>
    <string name="quantity">Quantity:</string>
    <string name="details">Details</string>
    <string name="confirmed">Confirmed</string>
    <string name="delete">Delete</string>
    <string name="first_name">First name</string>
    <string name="cash_on_delivery_cod">Cash on delivery (COD)</string>
    <string name="welcome_to_bazaar">Welcome to Bazaar</string>
</resources>