<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/category"
        android:title="@string/shop" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/nav_favourite"
        android:icon="@drawable/favorite"
        android:title="@string/favourite"/>

    <item
        android:id="@+id/nav_me"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

</menu>