<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".settings.ui.newAddressFragment.view.NewAddressFragment">


    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_et_backgroud"
        android:elevation="4dp"
        android:hint="First name"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_et_backgroud"
        android:elevation="4dp"
        android:hint="@string/last_name"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/nonEditable"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_et_backgroud"
        android:editable="false"
        android:elevation="4dp"
        android:paddingStart="12dp"
        android:text="@string/egypt"
        app:layout_constraintBottom_toTopOf="@+id/btnAddAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/et_phone"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/governorate"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_et_backgroud"
        android:elevation="4dp"
        android:hint="@string/enter_your_governorate"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_et_backgroud"
        android:elevation="4dp"
        android:hint="@string/enter_your_phone_number"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/building_number"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_et_backgroud"
        android:elevation="4dp"
        android:hint="@string/enter_your_city"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/governorate"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/building_number"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_et_backgroud"
        android:elevation="4dp"
        android:hint="@string/building_number"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/street_name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/street_name"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_et_backgroud"
        android:elevation="4dp"
        android:hint="@string/street_name"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/et_city"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/custom_button_background"
        android:text="@string/add_new_address"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nonEditable"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/nonEditable" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>